update cocoapods version

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - git submodule update --init --recursive
   - npm i -g grunt-cli
   - npm i firebase-tools@3.17.2 -g
-  - gem install cocoapods -v '0.32.1'
+  - gem install cocoapods
   - pod repo update
 script:
   - chmod 777 ./ios-mediation/scripts/ios_automate_release.sh
