Travis update- update Firebase tools version

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - git submodule add https://${GITHUB_KEY}@github.com/mopub/ios-mediation.git
   - git submodule update --init --recursive
   - npm i -g grunt-cli
-  - npm i firebase-tools@3.17.2 -g
+  - npm i -g firebase-tools@latest
   - gem install cocoapods
   - pod repo update
 script:
